<resources>
    <string name="app_name">Blaze Music</string>
    <string name="shuffle">Shuffle</string>
    <string name="playlists">Playlists</string>
    <string name="fav">Favourites</string>
    <string name="button">Button</string>
    <string name="total">Total Songs</string>
    <string name="back">Back</string>
    <string name="world">Music World</string>
    <string name="song_name">Song Name</string>
    <string name="prev">Previous</string>
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading</string>
    <string name="repeat">Repeat</string>
    <string name="equalizer">Equalizer</string>
    <string name="timer">Timer</string>
    <string name="share">Share</string>
    <string name="add">Add</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Together We Listen</string>
    <string name="NFeedback">Feedback</string>
    <string name="NSettings">Settings</string>
    <string name="NAbout">About</string>
    <string name="NExit">Exit</string>
    <string name="min_test_5s">5 Seconds</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="search_view">Search View</string>
    <string name="song_img">Song Image</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_delete">Delete</string>
    <string name="user_name">User Name</string>
    <string name="add_song">Add</string>
    <string name="remove_all">Remove All</string>
    <string name="search_song">Search Song</string>
    <string name="topic_feedback">Topic i.e. Suggestion, Error, Etc</string>
    <string name="email_feedback">Email Address(optional)</string>
    <string name="message_feedback">Message For the Feedback</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="set_theme">Set Theme</string>
    <string name="sort_by">Sort By</string>
    <string name="version_name">App Version</string>

</resources>